--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 add_subdirectory(app)
 add_subdirectory(TfUtils)
 add_subdirectory(test)
+add_subdirectory(TfTools)
