--- a/src/TfUtils/CMakeLists.txt
+++ b/src/TfUtils/CMakeLists.txt
@@ -5,21 +5,21 @@
 #
 
 # Define library. Only source files here!
-project(TfUtilsLib VERSION 0.1 LANGUAGES CXX)
+project(TfUtils VERSION 0.1 LANGUAGES CXX)
 
 # Collect using glob the source files
-file(GLOB SOURCES "*.cpp")
+file(GLOB SOURCES "src/*.cpp" "include/TfUtils/*.hpp")
 
-add_library(TfUtilsLib ${SOURCES})
+add_library(TfUtils ${SOURCES})
 
 # Define headers for this library. PUBLIC headers are used for
 # compiling the library, and will be added to consumers' build
 # paths.
 message("")
-message("TfUtilsLib BUILD_INTERFACE: ${CMAKE_CURRENT_SOURCE_DIR}/include")
-message("TfUtilsLib INSTALL_INTERFACE: include")
+message("TfUtils BUILD_INTERFACE: ${CMAKE_CURRENT_SOURCE_DIR}/include")
+message("TfUtils INSTALL_INTERFACE: include")
 message("")
-target_include_directories(TfUtilsLib PUBLIC
+target_include_directories(TfUtils PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
@@ -31,7 +31,8 @@ target_include_directories(TfUtilsLib PUBLIC
 #    PRIVATE cxx_variadic_templates)
 
 # Depend on a library that we defined in the top-level file
-target_link_libraries(TfUtilsLib
+target_link_libraries(TfUtils
+    TfTools
     Boost::program_options
     )
 
