--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 *.a
 *.lib
 
+# cmake build
+**/build/*
+
 # Executables
 *.exe
 *.out
@@ -36,4 +39,6 @@
 
 # Ignore CLion stuff
 *.idea/*
-cmake-build-debug/*
+**/cmake-build-debug/*
+
+
