adding Boost::Log-ing trivial

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,12 +3,16 @@ project(trash_file)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Include Boost as an imported target
-find_package(Boost 1.65 COMPONENTS program_options unit_test_framework REQUIRED)
+find_package(Boost 1.65 COMPONENTS program_options unit_test_framework log REQUIRED)
 add_library(boost INTERFACE IMPORTED)
 set_property(TARGET boost PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
 message("Boost_LIBRARIES: ${Boost_LIBRARIES}")
+
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 add_subdirectory(TfUtils)
 add_subdirectory(TfTools)
